--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-keeper-app",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://serdarklc1.github.io/keeper-app",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -13,8 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "homepage":"https://github.com/SerdarKlc1/keeper-app.git"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
