--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-keeper-app",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://serdarklc1.github.io/keeper-app",
+  "homepage": "https://SerdarKlc1.github.io/keeper-app",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -18,12 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
